tests/script_runtime_errors/merge_assign_target_new_no_object/error.txt
Error: 
    1 | let event = merge event of 7 end
      |                            ^ Conflicting types, got integer but expected record
